--- a/blackbox.html
+++ b/blackbox.html
@@ -1,49 +1,30 @@
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        div{
-            height: 300px;
-            width: 300px;
-            background-color: blueviolet;
-            animation:box 6s linear 3s 4 forwards;
-                }
-                @keyframes box{
-                    0%{
-                        background-color: chartreuse;   
-                      }
-                    50%{
-                        background-color:red;
-                    }
-                    100%{
-                        background-color: gold;
-                    }
-                }
-        
-    </style>
-</head>
-<body>
-    <div></div>
-</body>
-</html>-->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document
-        <style>
-            #kavya{
-                color: blueviolet;
-                
-            }
-        </style>
-    </title>
+<style>
+body {
+  background-color: lightgrey;
+  color: blue;
+}
+
+h1 {
+  background-color: black;
+  color: white;
+}
+
+div {
+  background-color: blue;
+  color: white;
+}
+</style>
 </head>
 <body>
-    <h1 id="kavya">welcome !!!!</h1>
+
+<h1>This is a Heading</h1>
+<p>This page has a grey background color and a blue text.</p>
+<div>This is a div.</div>
+
 </body>
 </html>
+
+
