--- a/newfile.html
+++ b/newfile.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>Lorem ipsum dolor<span style="color: red; border:1px solid black"> sit amet consectetur adipisicing</span> elit. Voluptas libero iure reprehenderit culpa sunt nemo? Mollitia dolor delectus deleniti velit.</p>
 </body>
 </html>
